<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- downexample -->
    <string name="app_name">Express measurement</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="device_rssi">rssi</string>
    <string name="text_detail">detail</string>
    <string name="menu_show">Data Display</string>
    <string name="menu_set">Setting</string>
    <string name="set_time">Synchronization Time</string>
    <string name="set_flash">Clear Flash</string>
    <string name="set_tv_worker">Set Operator (up to eight Words)</string>
    <string name="set_worker">Set Operator</string>
    <string name="set_tv_logo">Set Logo (up to eight Words)</string>
    <string name="set_logo">Set Logo</string>
    <string name="set_tv_bili">Set the volume weight ratio coefficient (less than 10000)</string>
    <string name="set_bili">Set the volume weight ratio coefficient</string>
    <string name="show_data">The total number of data：</string>
    <string name="show_update">Uploading</string>
    <string name="rv_1">ExpressNumber</string>
    <string name="rv_2">Operator</string>
    <string name="rv_3">MasterBillNumber</string>
    <string name="rv_4">SonNumber</string>
    <string name="rv_5">BranchCode</string>
    <string name="rv_6">CenterOfTheBarcode</string>
    <string name="rv_7">PurposeOfTheBarcode</string>
    <string name="rv_8">DateAndTime</string>
    <string name="rv_9">Length</string>
    <string name="rv_10">Width</string>
    <string name="rv_11">Height</string>
    <string name="rv_12">VolumeWeight</string>
    <string name="rv_13">Identify</string>
    <string name="scan">Connection</string>
    <string name="camera_scan">camera</string>
    <string name="scan_barcode">scan barcode</string>
    <string name="qrcode_text">The bar code can be scanned automatically by putting it in the box.</string>
</resources>
